Unshadowed Spear Ability and finished Nightmare

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -46,6 +46,7 @@
   "item.lotmcraft.notary_debuff_ability": "God says its not effective",
   "item.lotmcraft.light_of_holiness_ability": "Light of Holiness",
   "item.lotmcraft.purification_halo_ability": "Purification Halo",
+  "item.lotmcraft.unshadowed_spear_ability": "Unshadowed Spear",
 
   "item.lotmcraft.trap_ability": "Trap",
   "item.lotmcraft.provoking_ability": "Provoking",
