--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -144,6 +144,8 @@
   "item.lotmcraft.blink_ability": "Blink",
   "item.lotmcraft.travelers_door_ability": "Travelers Door",
 
+  "item.lotmcraft.spectating_ability": "Spectating",
+
 
   "lotm.ability.cogitation.tick": "Cogitating",
 
@@ -163,6 +165,7 @@
   "item.lotmcraft.physical_enhancements_tyrant_ability": "Physical Enhancements",
   "item.lotmcraft.physical_enhancements_darkness_ability": "Physical Enhancements",
   "item.lotmcraft.physical_enhancements_mother_ability": "Physical Enhancements",
+  "item.lotmcraft.physical_enhancements_visionary_ability": "Physical Enhancements",
 
   "item.lotmcraft.flaming_hit_ability": "Flaming Hit",
   "item.lotmcraft.fire_resistance_ability": "Fire Resistance",
