--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -285,7 +285,7 @@
 
   "lotm.griefing": "Griefing Enabled",
   "lotm.selected": "Selected",
-  "lotm.potion_recipe": "Potion recipe",
+  "lotm.potion_recipe": "Potion Recipe",
   "lotm.beyonder_message.full": "Become a Beyonder of the %s Pathway at Sequence %s",
   "creativetab.lotmcraft.beyonder_ingredients_tab": "Potion Ingredients",
   "creativetab.lotmcraft.beyonder_recipes_tab": "Potion Recipes",
