Added new Villager profession Evernight Clergyman

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -193,6 +193,7 @@
   "entity.lotmcraft.electric_shock": "Electric Shock",
   "entity.lotmcraft.lightning": "Lightning",
   "entity.minecraft.villager.lotmcraft.beyonder_merchant": "Beyonder Merchant",
+  "entity.minecraft.villager.lotmcraft.evernight_clergyman": "Evernight Clergyman",
 
   "_comment006": "Potions-----------------------------------------------------------------------------",
   "item.lotmcraft.empty_bottle": "Empty Bottle",
