Added translations for everything and created the german translations, added the eternal blazing sun clergyman

--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -1,7 +1,4 @@
 {
-  "lotm.pathway": "Pathway",
-  "lotm.sequence": "Sequence",
-
   "item.lotmcraft.fool_card": "Fool Card",
   "item.lotmcraft.lotm_icon": "LotM Icon",
   "item.lotmcraft.paper_figurine_substitute": "Paper Figurine Substitute",
@@ -12,6 +9,8 @@
   "creativetab.lotmcraft.abilities_tab": "Beyonder Abilities",
   "creativetab.lotmcraft.passive_abilities_tab": "Passive Beyonder Abilities",
   "creativetab.lotmcraft.beyonder_potions_tab": "Beyonder Potions",
+  "creativetab.lotmcraft.beyonder_ingredients_tab": "Potion Ingredients",
+  "creativetab.lotmcraft.beyonder_recipes_tab": "Potion Recipes",
 
   "_comment000": "Key Binds-------------------------------------------------------------------------------------",
   "key.beyonders.become_beyonder_debug": "Become a Beyonder",
@@ -150,6 +149,7 @@
 
   "lotm.ability.cogitation.tick": "Cogitating",
 
+  "item.lotmcraft.ability_not_implemented": "Abilities for this Sequence are not yet implemented",
 
   "_comment002": "Passive Abilities-----------------------------------------------------------------------------",
   "item.lotmcraft.physical_enhancements_red_priest_ability": "Physical Enhancements",
@@ -184,6 +184,8 @@
   "_comment004": "Sounds-----------------------------------------------------------------------------",
   "sounds.lotmcraft.midnight_poem": "Midnight Poem",
   "sounds.lotmcraft.melody_of_death": "Melody of Death",
+  "sounds.lotmcraft.dazing_song": "Dazing Song",
+  "sounds.lotmcraft.song_of_courage": "Song of Courage",
 
   "_comment005": "Entities-----------------------------------------------------------------------------",
   "entity.lotmcraft.fire_raven": "Fire Raven",
@@ -195,71 +197,11 @@
   "entity.lotmcraft.lightning": "Lightning",
   "entity.minecraft.villager.lotmcraft.beyonder_merchant": "Beyonder Merchant",
   "entity.minecraft.villager.lotmcraft.evernight_clergyman": "Evernight Clergyman",
+  "entity.minecraft.villager.lotmcraft.eternal_blazing_sun_clergyman": "Eternal Blazing Sun Clergyman",
 
   "_comment006": "Potions-----------------------------------------------------------------------------",
   "item.lotmcraft.empty_bottle": "Empty Bottle",
 
-  "item.lotmcraft.seer_potion": "Seer Potion",
-  "item.lotmcraft.clown_potion": "Clown Potion",
-  "item.lotmcraft.magician_potion": "Magician Potion",
-  "item.lotmcraft.faceless_potion": "Faceless Potion",
-  "item.lotmcraft.marionettist_potion": "Marionettist Potion",
-
-  "item.lotmcraft.bard_potion": "Bard Potion",
-  "item.lotmcraft.light_supplicant_potion": "Light Supplicant Potion",
-  "item.lotmcraft.solar_high_priest_potion": "Solar High Priest Potion",
-  "item.lotmcraft.notary_potion": "Notary Potion",
-  "item.lotmcraft.priest_of_light_potion": "Priest of Light Potion",
-
-  "item.lotmcraft.sailor_potion": "Sailor Potion",
-  "item.lotmcraft.folk_of_rage_potion": "Folk of Rage Potion",
-  "item.lotmcraft.seafarer_potion": "Seafarer Potion",
-  "item.lotmcraft.wind_blessed_potion": "Wind Blessed Potion",
-  "item.lotmcraft.ocean_songster_potion": "Ocean Songster Potion",
-
-  "item.lotmcraft.hunter_potion": "Hunter Potion",
-  "item.lotmcraft.provoker_potion": "Provoker Potion",
-  "item.lotmcraft.pyromaniac_potion": "Pyromaniac Potion",
-  "item.lotmcraft.conspirer_potion": "Conspirer Potion",
-  "item.lotmcraft.reaper_potion": "Reaper Potion",
-
-  "item.lotmcraft.criminal_potion": "Criminal Potion",
-  "item.lotmcraft.unwinged_angel_potion": "Unwinged Angel Potion",
-  "item.lotmcraft.serial_killer_potion": "Serial Killer Potion",
-  "item.lotmcraft.devil_potion": "Devil Potion",
-  "item.lotmcraft.desire_apostle_potion": "Desire Apostle Potion",
-
-  "item.lotmcraft.sleepless_potion": "Sleepless Potion",
-  "item.lotmcraft.midnight_poet_potion": "Midnight Poet Potion",
-  "item.lotmcraft.nightmare_potion": "Nightmare Potion",
-  "item.lotmcraft.soul_assurer_potion": "Soul Assurer Potion",
-  "item.lotmcraft.spirit_warlock_potion": "Spirit Warlock Potion",
-
-  "item.lotmcraft.apprentice_potion": "Apprentice Potion",
-  "item.lotmcraft.trickmaster_potion": "Trickmaster Potion",
-  "item.lotmcraft.astrologer_potion": "Astrologer Potion",
-  "item.lotmcraft.scribe_potion": "Scribe Potion",
-  "item.lotmcraft.traveler_potion": "Traveler Potion",
-
-  "item.lotmcraft.planter_potion": "Planter Potion",
-  "item.lotmcraft.doctor_potion": "Doctor Potion",
-  "item.lotmcraft.harvest_priest_potion": "Harvest Priest Potion",
-  "item.lotmcraft.biologist_potion": "Harvest Priest Potion",
-  "item.lotmcraft.druid_potion": "Harvest Priest Potion",
-
-  "item.lotmcraft.assassin_potion": "Assassin Potion",
-  "item.lotmcraft.instigator_potion": "Instigator Potion",
-  "item.lotmcraft.witch_potion": "Witch Potion",
-  "item.lotmcraft.demoness_of_pleasure_potion": "Demoness of Pleasure Potion",
-  "item.lotmcraft.demoness_of_affliction_potion": "Demoness of Affliction Potion",
-
-  "item.lotmcraft.spectator_potion": "Spectator Potion",
-  "item.lotmcraft.telepathist_potion": "Telepathist Potion",
-  "item.lotmcraft.psychiatrist_potion": "Psychiatrist Potion",
-  "item.lotmcraft.hypnotist_potion": "Hypnotist Potion",
-  "item.lotmcraft.dreamwalker_potion": "Dreamwalker Potion",
-
-  "item.lotmcraft.ability_not_implemented": "Abilities for this Sequence are not yet implemented",
 
   "_comment007": "Damage-----------------------------------------------------------------------------",
   "death.attack.loosing_control": "%1$s lost control.",
@@ -302,13 +244,281 @@
   "item.lotmcraft.sphinx_brain": "Brain of a Sphinx",
   "item.lotmcraft.black_hunting_spider_composite_eyes": "Composite Eyes of a Black Hunting Spider",
 
+  "_comment010": "Pathways-----------------------------------------------------------------------------",
+  "lotm.pathway.fool": "Fool",
+  "lotm.pathway.error": "Error",
+  "lotm.pathway.door": "Door",
+  "lotm.pathway.visionary": "Visionary",
+  "lotm.pathway.sun": "Sun",
+  "lotm.pathway.tyrant": "Tyrant",
+  "lotm.pathway.hanged_man": "Hanged Man",
+  "lotm.pathway.white_tower": "White Tower",
+  "lotm.pathway.demoness": "Demoness",
+  "lotm.pathway.red_priest": "Red Priest",
+  "lotm.pathway.darkness": "Darkness",
+  "lotm.pathway.twilight_giant": "Twilight Giant",
+  "lotm.pathway.death": "Death",
+  "lotm.pathway.abyss": "Abyss",
+  "lotm.pathway.chained": "Chained",
+  "lotm.pathway.mother": "Mother",
+  "lotm.pathway.moon": "Moon",
+  "lotm.pathway.hermit": "Hermit",
+  "lotm.pathway.paragon": "Paragon",
+  "lotm.pathway.justiciar": "Justiciar",
+  "lotm.pathway.black_emperor": "Black Emperor",
+  "lotm.pathway.wheel_of_fortune": "Wheel of Fortune",
+
+  "_comment011": "Sequences-----------------------------------------------------------------------------",
+  "lotm.sequence.fool": "Fool",
+  "lotm.sequence.attendant_of_mysteries": "Attendant of Mysteries",
+  "lotm.sequence.miracle_invoker": "Miracle Invoker",
+  "lotm.sequence.scholar_of_yore": "Scholar of Yore",
+  "lotm.sequence.bizarro_sorcerer": "Bizarro Sorcerer",
+  "lotm.sequence.marionettist": "Marionettist",
+  "lotm.sequence.faceless": "Faceless",
+  "lotm.sequence.magician": "Magician",
+  "lotm.sequence.clown": "Clown",
+  "lotm.sequence.seer": "Seer",
+
+  "lotm.sequence.error": "Error",
+  "lotm.sequence.worm_of_time": "Worm of Time",
+  "lotm.sequence.trojan_horse_of_destiny": "Trojan Horse of Destiny",
+  "lotm.sequence.mentor_of_deceit": "Mentor of Deceit",
+  "lotm.sequence.parasite": "Parasite",
+  "lotm.sequence.dream_stealer": "Dream Stealer",
+  "lotm.sequence.prometheus": "Prometheus",
+  "lotm.sequence.cryptologist": "Cryptologist",
+  "lotm.sequence.swindler": "Swindler",
+  "lotm.sequence.marauder": "Marauder",
+
+  "lotm.sequence.door": "Door",
+  "lotm.sequence.key_of_stars": "Key of Stars",
+  "lotm.sequence.planeswalker": "Planeswalker",
+  "lotm.sequence.wanderer": "Wanderer",
+  "lotm.sequence.secrets_sorcerer": "Secrets Sorcerer",
+  "lotm.sequence.traveler": "Traveler",
+  "lotm.sequence.scribe": "Scribe",
+  "lotm.sequence.astrologer": "Astrologer",
+  "lotm.sequence.trickmaster": "Trickmaster",
+  "lotm.sequence.apprentice": "Apprentice",
+
+  "lotm.sequence.visionary": "Visionary",
+  "lotm.sequence.author": "Author",
+  "lotm.sequence.discerner": "Discerner",
+  "lotm.sequence.dream_weaver": "Dream Weaver",
+  "lotm.sequence.manipulator": "Manipulator",
+  "lotm.sequence.dreamwalker": "Dreamwalker",
+  "lotm.sequence.hypnotist": "Hypnotist",
+  "lotm.sequence.psychiatrist": "Psychiatrist",
+  "lotm.sequence.telepathist": "Telepathist",
+  "lotm.sequence.spectator": "Spectator",
+
+  "lotm.sequence.sun": "Sun",
+  "lotm.sequence.white_angel": "White Angel",
+  "lotm.sequence.lightseeker": "Lightseeker",
+  "lotm.sequence.justice_mentor": "Justice Mentor",
+  "lotm.sequence.unshadowed": "Unshadowed",
+  "lotm.sequence.priest_of_light": "Priest of Light",
+  "lotm.sequence.notary": "Notary",
+  "lotm.sequence.solar_high_priest": "Solar High Priest",
+  "lotm.sequence.light_supplicant": "Light Supplicant",
+  "lotm.sequence.bard": "Bard",
+
+  "lotm.sequence.tyrant": "Tyrant",
+  "lotm.sequence.thunder_god": "Thunder God",
+  "lotm.sequence.calamity": "Calamity",
+  "lotm.sequence.sea_king": "Sea King",
+  "lotm.sequence.cataclysmic_interrer": "Cataclysmic Interrer",
+  "lotm.sequence.ocean_songster": "Ocean Songster",
+  "lotm.sequence.wind_blessed": "Wind Blessed",
+  "lotm.sequence.seafarer": "Seafarer",
+  "lotm.sequence.folk_of_rage": "Folk of Rage",
+  "lotm.sequence.sailor": "Sailor",
+
+  "lotm.sequence.white_tower": "White Tower",
+  "lotm.sequence.omniscient_eye": "Omniscient Eye",
+  "lotm.sequence.wisdom_angel": "Wisdom Angel",
+  "lotm.sequence.cognizer": "Cognizer",
+  "lotm.sequence.prophet": "Prophet",
+  "lotm.sequence.mysticism_magister": "Mysticism Magister",
+  "lotm.sequence.polymath": "Polymath",
+  "lotm.sequence.detective": "Detective",
+  "lotm.sequence.student_of_ratiocination": "Student of Ratiocination",
+  "lotm.sequence.reader": "Reader",
+
+  "lotm.sequence.hanged_man": "Hanged Man",
+  "lotm.sequence.dark_angel": "Dark Angel",
+  "lotm.sequence.profane_presbyter": "Profane Presbyter",
+  "lotm.sequence.trinity_templar": "Trinity Templar",
+  "lotm.sequence.black_knight": "Black Knight",
+  "lotm.sequence.shepherd": "Shepherd",
+  "lotm.sequence.rose_bishop": "Rose Bishop",
+  "lotm.sequence.shadow_ascetic": "Shadow Ascetic",
+  "lotm.sequence.listener": "Listener",
+  "lotm.sequence.secrets_supplicant": "Secrets Supplicant",
+
+  "lotm.sequence.darkness": "Darkness",
+  "lotm.sequence.knight_of_misfortune": "Knight of Misfortune",
+  "lotm.sequence.servant_of_concealment": "Servant of Concealment",
+  "lotm.sequence.horror_bishop": "Horror Bishop",
+  "lotm.sequence.nightwatcher": "Nightwatcher",
+  "lotm.sequence.spirit_warlock": "Spirit Warlock",
+  "lotm.sequence.soul_assurer": "Soul Assurer",
+  "lotm.sequence.nightmare": "Nightmare",
+  "lotm.sequence.midnight_poet": "Midnight Poet",
+  "lotm.sequence.sleepless": "Sleepless",
+
+  "lotm.sequence.death": "Death",
+  "lotm.sequence.pale_emperor": "Pale Emperor",
+  "lotm.sequence.death_consul": "Death Consul",
+  "lotm.sequence.ferryman": "Ferryman",
+  "lotm.sequence.undying": "Undying",
+  "lotm.sequence.gatekeeper": "Gatekeeper",
+  "lotm.sequence.spirit_guide": "Spirit Guide",
+  "lotm.sequence.spirit_medium": "Spirit Medium",
+  "lotm.sequence.gravedigger": "Gravedigger",
+  "lotm.sequence.corpse_collector": "Corpse Collector",
+
+  "lotm.sequence.twilight_giant": "Twilight Giant",
+  "lotm.sequence.hand_of_god": "Hand of God",
+  "lotm.sequence.glory": "Glory",
+  "lotm.sequence.silver_knight": "Silver Knight",
+  "lotm.sequence.demon_hunter": "Demon Hunter",
+  "lotm.sequence.guardian": "Guardian",
+  "lotm.sequence.dawn_paladin": "Dawn Paladin",
+  "lotm.sequence.weapon_master": "Weapon Master",
+  "lotm.sequence.pugilist": "Pugilist",
+  "lotm.sequence.warrior": "Warrior",
+
+  "lotm.sequence.demoness": "Demoness",
+  "lotm.sequence.demoness_of_apocalypse": "Demoness of Apocalypse",
+  "lotm.sequence.demoness_of_catastrophe": "Demoness of Catastrophe",
+  "lotm.sequence.demoness_of_unaging": "Demoness of Unaging",
+  "lotm.sequence.demoness_of_despair": "Demoness of Despair",
+  "lotm.sequence.demoness_of_affliction": "Demoness of Affliction",
+  "lotm.sequence.demoness_of_pleasure": "Demoness of Pleasure",
+  "lotm.sequence.witch": "Witch",
+  "lotm.sequence.instigator": "Instigator",
+  "lotm.sequence.asassin": "Asassin",
+
+  "lotm.sequence.red_priest": "Red Priest",
+  "lotm.sequence.conqueror": "Conqueror",
+  "lotm.sequence.weather_warlock": "Weather Warlock",
+  "lotm.sequence.war_bishop": "War Bishop",
+  "lotm.sequence.iron_blooded_knight": "Iron Blooded Knight",
+  "lotm.sequence.reaper": "Reaper",
+  "lotm.sequence.conspirer": "Conspirer",
+  "lotm.sequence.pyromaniac": "Pyromaniac",
+  "lotm.sequence.provoker": "Provoker",
+  "lotm.sequence.hunter": "Hunter",
+
+  "lotm.sequence.hermit": "Hermit",
+  "lotm.sequence.knowledge_emperor": "Knowledge Emperor",
+  "lotm.sequence.sage": "Sage",
+  "lotm.sequence.clairvoyant": "Clairvoyant",
+  "lotm.sequence.mysticologist": "Mysticologist",
+  "lotm.sequence.constellations_master": "Constellations Master",
+  "lotm.sequence.scrolls_professor": "Scrolls Professor",
+  "lotm.sequence.warlock": "Warlock",
+  "lotm.sequence.melee_scholar": "Melee Scholar",
+  "lotm.sequence.mystery_pryer": "Mystery Pryer",
+
+  "lotm.sequence.paragon": "Paragon",
+  "lotm.sequence.illuminator": "Illuminator",
+  "lotm.sequence.knowledge_master": "Knowledge Master",
+  "lotm.sequence.arcane_scholar": "Arcane Scholar",
+  "lotm.sequence.alchemist": "Alchemist",
+  "lotm.sequence.astronomer": "Astronomer",
+  "lotm.sequence.artisan": "Artisan",
+  "lotm.sequence.appraiser": "Appraiser",
+  "lotm.sequence.archeologist": "Archeologist",
+  "lotm.sequence.savant": "Savant",
+
+  "lotm.sequence.wheel_of_fortune": "Wheel of Fortune",
+  "lotm.sequence.snake_of_mercury": "Snake of Mercury",
+  "lotm.sequence.soothsayer": "Soothsayer",
+  "lotm.sequence.chaoswalker": "Chaoswalker",
+  "lotm.sequence.misfortune_mage": "Misfortune Mage",
+  "lotm.sequence.winner": "Winner",
+  "lotm.sequence.calamity_priest": "Calamity Priest",
+  "lotm.sequence.lucky_one": "Lucky One",
+  "lotm.sequence.robot": "Robot",
+  "lotm.sequence.monster": "Monster",
+
+  "lotm.sequence.mother": "Mother",
+  "lotm.sequence.naturewalker": "Naturewalker",
+  "lotm.sequence.desolate_matriarch": "Desolate Matriarch",
+  "lotm.sequence.pallbearer": "Pallbearer",
+  "lotm.sequence.classical_alchemist": "Classical Alchemist",
+  "lotm.sequence.druid": "Druid",
+  "lotm.sequence.biologist": "Biologist",
+  "lotm.sequence.harvest_priest": "Harvest Priest",
+  "lotm.sequence.doctor": "Doctor",
+  "lotm.sequence.planter": "Planter",
+
+  "lotm.sequence.moon": "Moon",
+  "lotm.sequence.beauty_goddess": "Beauty Goddess",
+  "lotm.sequence.life-giver": "Life-Giver",
+  "lotm.sequence.high_summoner": "High Summoner",
+  "lotm.sequence.shaman_king": "Shaman King",
+  "lotm.sequence.scarlet_scholar": "Scarlet Scholar",
+  "lotm.sequence.potions_professor": "Potions Professor",
+  "lotm.sequence.vampire": "Vampire",
+  "lotm.sequence.beast_tamer": "Beast Tamer",
+  "lotm.sequence.apothecary": "Apothecary",
+
+  "lotm.sequence.abyss": "Abyss",
+  "lotm.sequence.filthy_monarch": "Filthy Monarch",
+  "lotm.sequence.bloody_archduke": "Bloody Archduke",
+  "lotm.sequence.blatherer": "Blatherer",
+  "lotm.sequence.demon": "Demon",
+  "lotm.sequence.desire_apostle": "Desire Apostle",
+  "lotm.sequence.devil": "Devil",
+  "lotm.sequence.serial_killer": "Serial Killer",
+  "lotm.sequence.unwinged_angel": "Unwinged Angel",
+  "lotm.sequence.criminal": "Criminal",
+
+  "lotm.sequence.chained": "Chained",
+  "lotm.sequence.abomination": "Abomination",
+  "lotm.sequence.ancient_bane": "Ancient Bane",
+  "lotm.sequence.disciple_of_silence": "Disciple of Silence",
+  "lotm.sequence.puppet": "Puppet",
+  "lotm.sequence.wraith": "Wraith",
+  "lotm.sequence.zombie": "Zombie",
+  "lotm.sequence.werewolf": "Werewolf",
+  "lotm.sequence.lunatic": "Lunatic",
+  "lotm.sequence.prisoner": "Prisoner",
+
+  "lotm.sequence.black_emperor": "Black Emperor",
+  "lotm.sequence.prince_of_abolition": "Prince of Abolition",
+  "lotm.sequence.duke_of_entropy": "Duke of Entropy",
+  "lotm.sequence.frenzied_mage": "Frenzied Mage",
+  "lotm.sequence.ear_of_the_fallen": "Ear of the Fallen",
+  "lotm.sequence.mentor_of_disorder": "Mentor of Disorder",
+  "lotm.sequence.baron_of_corruption": "Baron of Corruption",
+  "lotm.sequence.briber": "Briber",
+  "lotm.sequence.barbarian": "Barbarian",
+  "lotm.sequence.lawyer": "Lawyer",
+
+  "lotm.sequence.justiciar": "Justiciar",
+  "lotm.sequence.hand_of_order": "Hand of Order",
+  "lotm.sequence.balancer": "Balancer",
+  "lotm.sequence.chaos_hunter": "Chaos Hunter",
+  "lotm.sequence.imperative_mage": "Imperative Mage",
+  "lotm.sequence.disciplinary_paladin": "Disciplinary Paladin",
+  "lotm.sequence.judge": "Judge",
+  "lotm.sequence.interrogator": "Interrogator",
+  "lotm.sequence.sheriff": "Sheriff",
+  "lotm.sequence.arbiter": "Arbiter",
+
 
   "lotm.griefing": "Griefing Enabled",
   "lotm.selected": "Selected",
   "lotm.potion_recipe": "Potion Recipe",
   "lotm.beyonder_message.full": "Become a Beyonder of the %s Pathway at Sequence %s",
-  "creativetab.lotmcraft.beyonder_ingredients_tab": "Potion Ingredients",
-  "creativetab.lotmcraft.beyonder_recipes_tab": "Potion Recipes",
   "lotm.danger_premonition": "Danger Premonition",
-  "lotm.not_implemented_yet": "Not Implemented Yet"
+  "lotm.not_implemented_yet": "Not Implemented Yet",
+  "lotm.pathway": "Pathway",
+  "lotm.sequence": "Sequence",
+  "lotm.potion": "Potion"
 }
