Recipes and ingredients for Demoness and Spectator Pathway

--- a/src/main/resources/assets/lotmcraft/lang/de_de.json
+++ b/src/main/resources/assets/lotmcraft/lang/de_de.json
@@ -242,6 +242,15 @@
   "item.lotmcraft.magma_elf_core": "Kern eines Magma-Elfen",
   "item.lotmcraft.sphinx_brain": "Gehirn einer Sphinx",
   "item.lotmcraft.black_hunting_spider_composite_eyes": "Kompositaugen einer schwarzen Jagdspinne",
+  "item.lotmcraft.goat_horned_blackfish_blood": "Blut eines Ziegenhorn-Schwarzfisches",
+  "item.lotmcraft.illusory_chime_tree_fruit": "Frucht eines Trugbild-Klangbaums",
+  "item.lotmcraft.rainbow_salamander_pituitary_gland": "Hypophyse eines Regenbogensalamanders",
+  "item.lotmcraft.tree_of_elders_fruit": "Frucht des Baums der Ältesten",
+  "item.lotmcraft.dream_catcher_heart": "Herz eines Traumfängers",
+  "item.lotmcraft.abyss_demonic_fish_blood": "Blut eines Abyss-Dämonenfisches",
+  "item.lotmcraft.agate_peacock_egg": "Achatpfauenei",
+  "item.lotmcraft.succubus_eyes": "Augen eines Sukkubus",
+  "item.lotmcraft.shadow_lizard_scales": "Schattenechsen-Schuppen",
 
   "_comment010": "Pathways-----------------------------------------------------------------------------",
   "lotm.pathway.fool": "Narr",
