--- a/src/main/resources/assets/lotmcraft/lang/en_us.json
+++ b/src/main/resources/assets/lotmcraft/lang/en_us.json
@@ -243,6 +243,15 @@
   "item.lotmcraft.magma_elf_core": "Core of a Magma Elf",
   "item.lotmcraft.sphinx_brain": "Brain of a Sphinx",
   "item.lotmcraft.black_hunting_spider_composite_eyes": "Composite Eyes of a Black Hunting Spider",
+  "item.lotmcraft.goat_horned_blackfish_blood": "Blood from a Goat Horned Blackfish",
+  "item.lotmcraft.illusory_chime_tree_fruit": "Fruit from an Illusory Chime Tree",
+  "item.lotmcraft.rainbow_salamander_pituitary_gland": "Pituitary Gland of a Rainbow Salamander",
+  "item.lotmcraft.tree_of_elders_fruit": "Fruit of the Tree of Elders",
+  "item.lotmcraft.dream_catcher_heart": "Heart of a Dream Catcher",
+  "item.lotmcraft.abyss_demonic_fish_blood": "Blood of an Abyss Demonic Fish",
+  "item.lotmcraft.agate_peacock_egg": "Egg of an Agate Peacock",
+  "item.lotmcraft.succubus_eyes": "Eyes of a Succubus",
+  "item.lotmcraft.shadow_lizard_scales": "Scales of a Shadow Lizard",
 
   "_comment010": "Pathways-----------------------------------------------------------------------------",
   "lotm.pathway.fool": "Fool",
